Fix en los endpoint de put y fix en la documentacion de swagger
