# routes/api.php
@@ -3,6 +3,7 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\studentController;
 use App\Http\Controllers\SchoolController;
+use App\Http\Controllers\TeacherController;
 
 // Estudiantes
 Route::get('/students',[studentController::class, 'getAll']);
@@ -24,4 +25,14 @@ Route::delete("/school/{id}",[SchoolController::class, 'delete']);
 Route::post("/school",[SchoolController::class, 'create']);
 
 Route::put("/school/{id}",[SchoolController::class, 'update']);
+// Profesor
+Route::get('/teacher',[TeacherController::class, 'getAll']);
+
+Route::get("/teacher/{id}",[TeacherController::class, 'get']);
+
+Route::delete("/teacher/{id}",[TeacherController::class, 'delete']);
+
+Route::post("/teacher",[TeacherController::class, 'create']);
+
+Route::put("/teacher/{id}",[TeacherController::class, 'update']);
 ?>
